<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ryzen.contacts.AddContact">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:hint="@string/first_name"
        android:id="@+id/FirstName" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/FirstName"
        android:layout_marginTop="16dp"
        android:hint="@string/last_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LastName"
        android:layout_marginTop="25dp"
        android:hint="@string/email_id"
        android:id="@+id/EmailId"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EmailId"
        android:layout_marginTop="22dp"
        android:hint="@string/phone_no"
        android:id="@+id/PhoneNo"
        android:inputType="phone"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PhoneNo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:textSize="18sp"
        android:id="@+id/Save"
        />
</RelativeLayout>
